2005-06-06  Sven de Marothy <sven@physto.se>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkTextFieldPeer.c
	(gtkWidgetSetForeground): Avoid setting black-on-black selection color.

2005-06-05  Tom Tromey  <tromey@redhat.com>

	* java/lang/Class.java (resourcePath): Reindented.

2005-06-05  Tom Tromey  <tromey@redhat.com>

	* scripts/generate-locale-list.sh: Remove redundant 'cd'.

2005-06-06  Sven de Marothy <sven@physto.se>

	* gnu/java/awt/peer/gtk/GtkImage.java
	(getSource, deliver): Added null checks.
	* java/awt/image/RGBImageFilter.java
	(filterRGBPixels): Reimplement.
	
2005-06-05  Audrius Meskauskas <AudriusA@Bioinformatics.org>

	* org/omg/CORBA/VisibilityHelper.java: New helper.

2005-06-05  Audrius Meskauskas <AudriusA@Bioinformatics.org>

	* org/omg/stub/java/rmi/_Remote_Stub.java:
	Inheriting from Stub, Remote and Serializable.

2005-06-05  Audrius Meskauskas <AudriusA@Bioinformatics.org>

	* org\omg\CORBA\portable\ValueFactory.java (read_value): Changed 
	parameter type to org.omg.CORBA_2_3.portable.InputStream.
	* org\omg\CosNaming\_BindingIteratorStub.java,
	* org\omg\CosNaming\_NamingContextStub.java: Fixed serialVersionUID.
	* org\omg\CORBA_2_3\portable\InputStream.java 
	(read_value(BoxedValueHelper)): Implemented.
	* org\omg\CORBA_2_3\portable\OutputStream.java 
	(write_abstract_interface): 
	Changed parameter type to java.lang.Object.
	* org\omg\CORBA\portable\BoxedValueHelper.java: 
	Moved wrongly placed bracket.
	* org\omg\CORBA\ParameterMode.java: Inherit from
	Serializable, IDLEntity and removing duplicated header.
	(_PARAM_IN, _PARAM_OUT, _PARAM_INOUT): Making final.
	* org\omg\Messaging\SyncScopeHelper.java (extract, id, insert, 
	read, type, write): Making public.
	
2005-06-05  Ka-Hing Cheung  <kahing@javabsp.org>

	* javax/swing/event/TreeSelectionEvent.java
	(getPaths): Return a cloned copy.
	(isAddedPath): Implemented.
	(cloneWithSource): Likewise.

2005-06-05  Ka-Hing Cheung  <kahing@javabsp.org>
