@@ -1,3 +1,10 @@
+2005-06-06  Roman Kennke  <roman@kennke.org>
+
+	* javax/swing/plaf/basic/BasicTextUI.java
+	(getKeymapName): Reimplemented to return the classname of
+	itself. This way subclasses don't have to override this
+	method.
+
 2005-06-06  Sven de Marothy <sven@physto.se>
 
 	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkTextFieldPeer.c
